[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/gameover.gd" type="Script" id=1]
[ext_resource path="res://asset/GUI/GameOver_screen.png" type="Texture" id=2]
[ext_resource path="res://sound/gameover.ogg" type="AudioStream" id=3]
[ext_resource path="res://asset/gameover/Kreese_ghost.png" type="Texture" id=4]
[ext_resource path="res://animations/gameover_kreese.tres" type="SpriteFrames" id=5]
[ext_resource path="res://font.gui.tres" type="DynamicFont" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="cc" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = 172.0
margin_right = 256.0
margin_bottom = 441.0

[node name="h" type="HBoxContainer" parent="cc"]
margin_left = 176.0
margin_top = 97.0
margin_right = 336.0
margin_bottom = 171.0
custom_constants/separation = 9

[node name="t" type="TextureRect" parent="cc/h"]
margin_right = 39.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 20, 0 )
texture = ExtResource( 4 )
stretch_mode = 4

[node name="AnimatedSprite" type="AnimatedSprite" parent="cc/h/t"]
frames = ExtResource( 5 )
centered = false

[node name="v" type="VBoxContainer" parent="cc/h"]
margin_left = 48.0
margin_right = 160.0
margin_bottom = 74.0
alignment = 1

[node name="defeat" type="Label" parent="cc/h/v"]
margin_right = 112.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 7 )
text = "DEFEAT

DOES NOT  EXIST

IN THIS DOJO.

DOES IT ?"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]

[node name="nosensei_timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="nosensei_timer" to="." method="_on_nosensei_timer_timeout"]
